--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,15 +14,16 @@
     <base href="/">
 
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css?family=BioRhyme|Black+Ops+One|Bungee|Bungee+Shade|Creepster|Ewert|Fruktur|Gravitas+One|Monoton|Orbitron|Pacifico|Rubik:900" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid my-nav">
       <div class="row">
-        <div class="col-sm-12">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Foodie Finds</a>
+        <div class="col-sm-12 top-nav-bar">
+          <nav class="navbar navbar-expand-lg navbar-light top-of-page">
+            <a class="navbar-brand" href="#">FOODIE FINDS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,22 +44,31 @@
                 <a class="nav-link" href="/tweets/new">Placeholder <span class="sr-only">(current)</span></a>
               </li>
             </ul>
-              
-            <!-- social nav links -->
+           
+            <!-- account nav links -->
             <% if logged_in %>
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/logout">Log Out<span class="sr-only">(current)</span></a>
-                </li>                            
+              <ul class="navbar-nav ">   
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    UserName Placeholder
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">My Profile</a>
+                    <a class="dropdown-item" href="#">Log Out</a>
+                  </div>
+                </li>                     
               </ul>
             <% else %>
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/login">Log In<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/signup">Sign Up <span class="sr-only">(current)</span></a>
-                </li>                            
+              <ul class="navbar-nav ">   
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Account
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Log In</a>
+                    <a class="dropdown-item" href="#">Sign Up</a>
+                  </div>
+                </li>                     
               </ul>
             <% end %>
             </div> 
