--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,32 +22,12 @@
     <div class="container-fluid my-nav">
       <div class="row">
         <div class="col-sm-12 top-nav-bar">
-          <nav class="navbar navbar-expand-lg navbar-light top-of-page">
+          <nav class="navbar navbar-expand-sm navbar-light top-of-page">
             <a class="navbar-brand" href="#">FOODIE FINDS</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
           
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- site nav links -->
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/tweets">Placeholder <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/tweets/mytweets">Placeholder <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/tweets/new">Placeholder <span class="sr-only">(current)</span></a>
-              </li>
-            </ul>
-           
             <!-- account nav links -->
             <% if logged_in %>
-              <ul class="navbar-nav ">   
+              <ul class="nav navbar-nav ml-auto w-100 justify-content-end">   
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     UserName Placeholder
@@ -59,7 +39,7 @@
                 </li>                     
               </ul>
             <% else %>
-              <ul class="navbar-nav ">   
+              <ul class="nav navbar-nav ml-auto w-100 justify-content-end">   
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Account
@@ -71,9 +51,8 @@
                 </li>                     
               </ul>
             <% end %>
-            </div> 
           </nav>
-        </div> <!-- close .col-sm-12 -->
+        </div> <!-- close .col -->
       </div> <!-- close .row -->
     </div> <!-- close .container -->
 
