--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,23 +1,30 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
-  <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
-
-    <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
+  <div class="row">
+    <div class="col-sm-10 col-md-10 col-lg-10 mx-auto">
+      <header>
+        <p><h1>Find Unique Eating Experiences In Your City</h1></p>
+      </header>
     </div>
-
-    <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-      </ul>
-    </div>
-
   </div>
-</div>
+
+  <div class="row">
+    <div class="col-sm-8 col-md-8 col-lg-8 mx-auto">
+      <br>
+
+      <div class="content">
+        <p>Welcome to Foodie Finds! Our goal is to provide an open forum for foodies nationwide in order bring awareness to the hidden culinary gems in your communities. To get started just pick the state you're interested in and pick the discussion board for a city. If you'd like to join the discussion, then you'll first need to create an account.</p>
+      </div>
+
+      <!-- Default dropright button -->
+      <div class="btn-group dropright">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="-1,5">
+          Choose Your State!
+        </button>
+        <div class="dropdown-menu dropdown-menu-right scrollable-menu">
+          <!-- Dropdown menu links -->
+          <li><a href="#">Alabama</a></li>
+        </div>
+      </div>
+    </div> <!-- close .col -->
+  </div> <!-- close .row -->
+</div> <!-- close .container -->
