altered user sign-up layout, added minor routing

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -46,7 +46,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">Log In</a>
-                    <a class="dropdown-item" href="#">Sign Up</a>
+                    <a class="dropdown-item" href="/users/signup">Sign Up</a>
                   </div>
                 </li>                     
               </ul>
