--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-sm-12 top-nav-bar">
           <nav class="navbar navbar-expand-sm navbar-light top-of-page">
-            <a class="navbar-brand" href="#">FOODIE FINDS</a>
+            <a class="navbar-brand" href="/">FOODIE FINDS</a>
           
             <!-- account nav links -->
             <% if logged_in %>
@@ -45,7 +45,7 @@
                     Account
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Log In</a>
+                    <a class="dropdown-item" href="/users/login">Log In</a>
                     <a class="dropdown-item" href="/users/signup">Sign Up</a>
                   </div>
                 </li>                     
