--- a/app/views/users/create_new.erb
+++ b/app/views/users/create_new.erb
@@ -21,6 +21,7 @@
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                     <div class="col-sm-10">
                     <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                    <div class="reminder">*Required</div>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -37,4 +38,4 @@
             </form>
         </div> <!-- close .col -->
     </div> <!-- close .row -->
-</div> <!-- close .container-fluid -->
+</div> <!-- close .container -->
