--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,3 +1,5 @@
+<section class="flashmessage"><%= flash[:message] %></section>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-10 col-md-10 col-lg-10 mx-auto">
