--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,7 @@
-<br><br><br>
+<br><br>
+<section class="flashmessage"><%= flash[:message] %></section>
+<br>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-7 offset-md-2 col-lg-8 offset-lg-2 signupbox">
