--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,18 +5,18 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-7 offset-md-2 col-lg-8 offset-lg-2 signupbox">
-            <form>
+            <form action="/users/login" method="post">
                 <div class="form-group row">
                     <label for="username" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username" placeholder="Username">
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Username">
                     <div class="reminder">*Required</div>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                     <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                    <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password">
                     <div class="reminder">*Required</div>
                     </div>
                 </div>
