modified dropdown links

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -2,9 +2,9 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-10 col-md-10 col-lg-10 mx-auto">
+    <div class="col-sm-10 offset-sm-2 col-md-10 offset-md-2.5 col-lg-10 offset-lg-2.5">
       <header>
-        <p><h1>Find Unique Eating Experiences In Your City</h1></p>
+        <p><h1>Find Unique Culinary Experiences</h1></p>
       </header>
     </div>
   </div>
@@ -17,16 +17,68 @@
         <p>Welcome to Foodie Finds! Our goal is to provide an open forum for foodies nationwide in order bring awareness to the hidden culinary gems in your communities. To get started just pick the state you're interested in and pick the discussion board for a city. If you'd like to join the discussion, then you'll first need to create an account.</p>
       </div>
 
-      <!-- Default dropright button -->
-      <div class="btn-group dropright">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="-1,5">
-          Choose Your State!
-        </button>
-        <div class="dropdown-menu dropdown-menu-right scrollable-menu">
-          <!-- Dropdown menu links -->
-          <li><a href="#">Alabama</a></li>
+      <div class="dropdown show dropright">
+      <p>To get started, choose a state:</p>
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="-1,5">
+          States...
+        </a>
+        <div class="dropdown-menu scrollable-menu" aria-labelledby="dropdownMenuLink">
+            <a href="#" class="list-group-item list-group-item-action">Alabama</a>
+            <a href="#" class="list-group-item list-group-item-action">Alaska</a>
+            <a href="#" class="list-group-item list-group-item-action">Arizona</a>
+            <a href="#" class="list-group-item list-group-item-action">Arkansas</a>
+            <a href="#" class="list-group-item list-group-item-action">California</a>
+            <a href="#" class="list-group-item list-group-item-action">Colorado</a>
+            <a href="#" class="list-group-item list-group-item-action">Connecticut</a>
+            <a href="#" class="list-group-item list-group-item-action">Delaware</a>
+            <a href="#" class="list-group-item list-group-item-action">D.C.</a>
+            <a href="#" class="list-group-item list-group-item-action">Florida</a>
+            <a href="#" class="list-group-item list-group-item-action">Hawaii</a>
+            <a href="#" class="list-group-item list-group-item-action">Idaho</a>
+            <a href="#" class="list-group-item list-group-item-action">Illinois</a>
+            <a href="#" class="list-group-item list-group-item-action">Indiana</a>
+            <a href="#" class="list-group-item list-group-item-action">Iowa</a>
+            <a href="#" class="list-group-item list-group-item-action">Kansas</a>
+            <a href="#" class="list-group-item list-group-item-action">Kentucky</a>
+            <a href="#" class="list-group-item list-group-item-action">Louisiana</a>
+            <a href="#" class="list-group-item list-group-item-action">Maine</a>
+            <a href="#" class="list-group-item list-group-item-action">Maryland</a>
+            <a href="#" class="list-group-item list-group-item-action">Massachusetts</a>
+            <a href="#" class="list-group-item list-group-item-action">Michigan</a>
+            <a href="#" class="list-group-item list-group-item-action">Minnesota</a>
+            <a href="#" class="list-group-item list-group-item-action">Mississippi</a>
+            <a href="#" class="list-group-item list-group-item-action">Missouri</a>
+            <a href="#" class="list-group-item list-group-item-action">Montana</a>
+            <a href="#" class="list-group-item list-group-item-action">Nebraska</a>
+            <a href="#" class="list-group-item list-group-item-action">Nevada</a>
+            <a href="#" class="list-group-item list-group-item-action">New Hampshire</a>
+            <a href="#" class="list-group-item list-group-item-action">New Jerse</a>
+            <a href="#" class="list-group-item list-group-item-action">New Mexico</a>
+            <a href="#" class="list-group-item list-group-item-action">New York</a>
+            <a href="#" class="list-group-item list-group-item-action">North Carolina</a>
+            <a href="#" class="list-group-item list-group-item-action">North Dakota</a>
+            <a href="#" class="list-group-item list-group-item-action">Ohio</a>
+            <a href="#" class="list-group-item list-group-item-action">Oklahoma</a>
+            <a href="#" class="list-group-item list-group-item-action">Oregon</a>
+            <a href="#" class="list-group-item list-group-item-action">Pennsylvania</a>
+            <a href="#" class="list-group-item list-group-item-action">Rhode Island</a>
+            <a href="#" class="list-group-item list-group-item-action">South Carolina</a>
+            <a href="#" class="list-group-item list-group-item-action">South Dakota</a>
+            <a href="#" class="list-group-item list-group-item-action">Tennessee</a>
+            <a href="#" class="list-group-item list-group-item-action">Texas</a>
+            <a href="#" class="list-group-item list-group-item-action">Utah</a>
+            <a href="#" class="list-group-item list-group-item-action">Vermont</a>
+            <a href="#" class="list-group-item list-group-item-action">Virginia</a>
+            <a href="#" class="list-group-item list-group-item-action">Washington</a>
+            <a href="#" class="list-group-item list-group-item-action">West Virginia</a>
+            <a href="#" class="list-group-item list-group-item-action">Wisconsin</a>
+            <a href="#" class="list-group-item list-group-item-action">Wyoming</a>
         </div>
+      </div>
+    
       </div>
     </div> <!-- close .col -->
   </div> <!-- close .row -->
 </div> <!-- close .container -->
+
+
