--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -16,69 +16,81 @@
       <div class="content">
         <p>Welcome to Foodie Finds! Our goal is to provide an open forum for foodies nationwide in order bring awareness to the hidden culinary gems in your communities. To get started just pick the state you're interested in and pick the discussion board for a city. If you'd like to join the discussion, then you'll first need to create an account.</p>
       </div>
-
-      <div class="dropdown show dropright">
-      <p>To get started, choose a state:</p>
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="-1,5">
-          States...
-        </a>
-        <div class="dropdown-menu scrollable-menu" aria-labelledby="dropdownMenuLink">
-            <a href="#" class="list-group-item list-group-item-action">Alabama</a>
-            <a href="#" class="list-group-item list-group-item-action">Alaska</a>
-            <a href="#" class="list-group-item list-group-item-action">Arizona</a>
-            <a href="#" class="list-group-item list-group-item-action">Arkansas</a>
-            <a href="#" class="list-group-item list-group-item-action">California</a>
-            <a href="#" class="list-group-item list-group-item-action">Colorado</a>
-            <a href="#" class="list-group-item list-group-item-action">Connecticut</a>
-            <a href="#" class="list-group-item list-group-item-action">Delaware</a>
-            <a href="#" class="list-group-item list-group-item-action">D.C.</a>
-            <a href="#" class="list-group-item list-group-item-action">Florida</a>
-            <a href="#" class="list-group-item list-group-item-action">Hawaii</a>
-            <a href="#" class="list-group-item list-group-item-action">Idaho</a>
-            <a href="#" class="list-group-item list-group-item-action">Illinois</a>
-            <a href="#" class="list-group-item list-group-item-action">Indiana</a>
-            <a href="#" class="list-group-item list-group-item-action">Iowa</a>
-            <a href="#" class="list-group-item list-group-item-action">Kansas</a>
-            <a href="#" class="list-group-item list-group-item-action">Kentucky</a>
-            <a href="#" class="list-group-item list-group-item-action">Louisiana</a>
-            <a href="#" class="list-group-item list-group-item-action">Maine</a>
-            <a href="#" class="list-group-item list-group-item-action">Maryland</a>
-            <a href="#" class="list-group-item list-group-item-action">Massachusetts</a>
-            <a href="#" class="list-group-item list-group-item-action">Michigan</a>
-            <a href="#" class="list-group-item list-group-item-action">Minnesota</a>
-            <a href="#" class="list-group-item list-group-item-action">Mississippi</a>
-            <a href="#" class="list-group-item list-group-item-action">Missouri</a>
-            <a href="#" class="list-group-item list-group-item-action">Montana</a>
-            <a href="#" class="list-group-item list-group-item-action">Nebraska</a>
-            <a href="#" class="list-group-item list-group-item-action">Nevada</a>
-            <a href="#" class="list-group-item list-group-item-action">New Hampshire</a>
-            <a href="#" class="list-group-item list-group-item-action">New Jerse</a>
-            <a href="#" class="list-group-item list-group-item-action">New Mexico</a>
-            <a href="#" class="list-group-item list-group-item-action">New York</a>
-            <a href="#" class="list-group-item list-group-item-action">North Carolina</a>
-            <a href="#" class="list-group-item list-group-item-action">North Dakota</a>
-            <a href="#" class="list-group-item list-group-item-action">Ohio</a>
-            <a href="#" class="list-group-item list-group-item-action">Oklahoma</a>
-            <a href="#" class="list-group-item list-group-item-action">Oregon</a>
-            <a href="#" class="list-group-item list-group-item-action">Pennsylvania</a>
-            <a href="#" class="list-group-item list-group-item-action">Rhode Island</a>
-            <a href="#" class="list-group-item list-group-item-action">South Carolina</a>
-            <a href="#" class="list-group-item list-group-item-action">South Dakota</a>
-            <a href="#" class="list-group-item list-group-item-action">Tennessee</a>
-            <a href="#" class="list-group-item list-group-item-action">Texas</a>
-            <a href="#" class="list-group-item list-group-item-action">Utah</a>
-            <a href="#" class="list-group-item list-group-item-action">Vermont</a>
-            <a href="#" class="list-group-item list-group-item-action">Virginia</a>
-            <a href="#" class="list-group-item list-group-item-action">Washington</a>
-            <a href="#" class="list-group-item list-group-item-action">West Virginia</a>
-            <a href="#" class="list-group-item list-group-item-action">Wisconsin</a>
-            <a href="#" class="list-group-item list-group-item-action">Wyoming</a>
-        </div>
-      </div>
+      <div class="card" style="width: 18rem;">
+      <ul class="list-group list-group-flush d-flex justify-content-between align-items-center">
+                <li class="category-listing"><a href="#" class="">Alabama<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Alaska<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Arizona<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Arkansas<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">California<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Colorado<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Connecticut<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Delaware<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">D.C.<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Florida<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Hawaii<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Idaho<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Illinois<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Indiana<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Iowa<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Kansas<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Kentucky<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Louisiana<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Maine<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Maryland<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Massachusetts<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Michigan<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Minnesota<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Mississippi<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Missouri<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Montana<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Nebraska<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Nevada<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">New Hampshire<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">New Jerse<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">New Mexico<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">New York<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">North Carolina<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">North Dakota<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Ohio<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Oklahoma<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Oregon<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Pennsylvania<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Rhode Island<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">South Carolina<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">South Dakota<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Tennessee<<span class="badge pull-right">#</span>/a></li>
+                <li class="category-listing"><a href="#" class="">Texas<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Utah<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Vermont<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Virginia<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Washington<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">West Virginia<span class="badge pull-right">#</span></a></li>
+                <li class="category-listing"><a href="#" class="">Wisconsin<span class="badge pull-right">#</span></a></li>
+                
+      </ul>
+    </div>
     
+        
       </div>
     </div> <!-- close .col -->
   </div> <!-- close .row -->
 </div> <!-- close .container -->
-
-
+</div>
+<div class="container posting">
+  <div class="row">
+      <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-8 offset-lg-2">
+        <div class="post">
+          <div class="row">
+            <div class="col-3 user-info pull-left">
+              <p>test info<p>
+            </div>
+            <div class="col-5 post-info pull-left">
+              <p>hi</p>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+     </div>
+  </div>
+</div>
