updated post layout, made schema/class changes to remove cities, added states to seeds

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -59,7 +59,7 @@
                 <li class="category-listing"><a href="#" class="">Rhode Island<span class="badge pull-right">#</span></a></li>
                 <li class="category-listing"><a href="#" class="">South Carolina<span class="badge pull-right">#</span></a></li>
                 <li class="category-listing"><a href="#" class="">South Dakota<span class="badge pull-right">#</span></a></li>
-                <li class="category-listing"><a href="#" class="">Tennessee<<span class="badge pull-right">#</span>/a></li>
+                <li class="category-listing"><a href="#" class="">Tennessee<span class="badge pull-right">#</span></a></li>
                 <li class="category-listing"><a href="#" class="">Texas<span class="badge pull-right">#</span></a></li>
                 <li class="category-listing"><a href="#" class="">Utah<span class="badge pull-right">#</span></a></li>
                 <li class="category-listing"><a href="#" class="">Vermont<span class="badge pull-right">#</span></a></li>
@@ -80,17 +80,32 @@
 <div class="container posting">
   <div class="row">
       <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-8 offset-lg-2">
+
         <div class="post">
           <div class="row">
-            <div class="col-3 user-info pull-left">
-              <p>test info<p>
+            <div class="col-3 user-info pull-left align-self-center">
+                <div class="avatar">
+                  <img src="../images/no-photo.png" class="align-self-center mr-2">
+                  <p>testname</p>
+                  <form><input type="button" value="+1" class="like-button align-self-center mr-2"> #</form>
+                </div>
             </div>
-            <div class="col-5 post-info pull-left">
-              <p>hi</p>
+              
+            <div class="col-9 post-info pull-left">
+                <p>hello this si a bunch of random gibbersih for testingello this si a bunch of random gibbersih for testingello this si a bunch of random gibbersih for testingello this si a bunch of random gibbersih for testingello this si a bunch of random gibbersih for testing</p>    
             </div>
-            <div class="clearfix"></div>
-          </div>
-        </div>
-     </div>
-  </div>
-</div>
+              
+            <div class="postbottom">
+            
+                <div class="clearfix">
+                
+                </div>
+            </div>
+          </div> <!-- close .row -->
+        </div> <!-- close .post -->
+
+     </div> <!-- close .col-sm -->
+  </div> <!-- close .row -->
+</div> <!-- close.container-posting -->
+
+
