--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,7 +25,7 @@
           <nav class="navbar navbar-expand-sm navbar-light top-of-page">
             <a class="navbar-brand" href="/">FOODIE FINDS</a>
           
-            <!-- account nav links -->
+            <!-- account links -->
             <% if logged_in %>
               <ul class="nav navbar-nav ml-auto w-100 justify-content-end">   
                 <li class="nav-item dropdown">
